--- a/PhoneBill-Android/app/src/main/res/layout/activity_add_phone_call.xml
+++ b/PhoneBill-Android/app/src/main/res/layout/activity_add_phone_call.xml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="20dp"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/add_customer_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/customer_name"
+        app:met_iconRight="@drawable/ic_phonebill_foreground"
+        />
+
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/add_caller"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/caller"
+        app:met_iconRight="@drawable/ic_phonebill_foreground"
+        />
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/add_callee"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/callee"
+        app:met_iconRight="@drawable/ic_phonebill_foreground"
+        />
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/add_start_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/start_time"
+        app:met_iconRight="@drawable/ic_phonebill_foreground"
+        />
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/add_end_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/end_time"
+        app:met_iconRight="@drawable/ic_phonebill_foreground"
+        />
+
+</LinearLayout>
