--- a/PhoneBill-Android/app/src/main/res/menu/menu_main.xml
+++ b/PhoneBill-Android/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="edu.pdx.cs410j.miyasato.phonebill.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_readme"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_readme"
         app:showAsAction="never" />
 </menu>
