--- a/PhoneBill-Android/app/src/main/res/layout/activity_main.xml
+++ b/PhoneBill-Android/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,22 @@
         app:srcCompat="@android:drawable/stat_notify_chat" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/print_phone_bill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="162dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="161dp"
+            android:onClick="getPhoneBillClicked"
+            android:text="@string/print_phone_bill"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_button" />
 
         <Button
             android:id="@+id/add_button"
@@ -39,7 +53,7 @@
             android:layout_marginStart="161dp"
             android:layout_marginTop="230dp"
             android:layout_marginEnd="162dp"
-            android:onClick="createAccountClicked"
+            android:onClick="addPhoneBillClicked"
             android:text="@string/add_phonebill"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
