Added customer name and no phone bills if not found in result activity

--- a/PhoneBill-Android/app/src/main/res/layout/activity_main.xml
+++ b/PhoneBill-Android/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="154dp"
+            android:layout_marginTop="71dp"
+            android:layout_marginEnd="169dp"
+            android:text="@string/search_phone_bill"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/print_phone_bill" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
