--- a/PhoneBill-Android/app/src/main/res/layout/activity_main.xml
+++ b/PhoneBill-Android/app/src/main/res/layout/activity_main.xml
@@ -64,10 +64,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="154dp"
-            android:layout_marginTop="71dp"
+            android:layout_marginTop="68dp"
             android:layout_marginEnd="169dp"
+            android:onClick="searchButtonClicked"
             android:text="@string/search_phone_bill"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.291"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/print_phone_bill" />
     </androidx.constraintlayout.widget.ConstraintLayout>
