--- a/PhoneBill-Android/app/src/main/res/layout/activity_readme.xml
+++ b/PhoneBill-Android/app/src/main/res/layout/activity_readme.xml
@@ -8,12 +8,14 @@
 
     <TextView
         android:id="@+id/readme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
+        android:layout_width="391dp"
+        android:layout_height="341dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="120dp"
+        android:layout_marginEnd="58dp"
         android:ems="10"
         android:text="@string/readme"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
