--- a/PhoneBill-Android/app/src/main/res/values/colors.xml
+++ b/PhoneBill-Android/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="white">#fff</color>
+    <color name="button3">#2F2FB6</color>
+    <color name="button2">#2F89B6</color>
+    <color name="button1">#2FB689</color>
 </resources>
